Spacing fixes.

--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -24,24 +24,12 @@
 }
 
 body {
-    width: 100%;
     height: 100vh;
+    width: 100%;
     padding: 0;
 
-    min-height: 100vh;
-
     display: grid;
-    grid-template-rows: auto 1fr auto;
-}
-
-header {
-    background:lightcyan;
-    text-align: center;
-    height: 5rem;
-}
-
-main {
-    margin: 0 auto;
+    place-items: center;
 }
 
 .font-color{
@@ -147,14 +135,14 @@ main {
     color: #d9d9d9;
     width: 95px;
     height: 40px;
-    background: darkgrey;
+    background: black;
     box-shadow: var(--box-shadow);
     border: none;
     text-align: center;
 }
 
 .btn-fs:hover {
-    background: lightgrey;
+    background: #212121;
 }
 
 .btn-fs:active {
@@ -210,25 +198,19 @@ main {
     color: #d9d9d9;
     width: 200px;
     height: 40px;
-    background: darkgrey;
+    background: black;
     box-shadow: var(--box-shadow);
     border: none;
     text-align: center;
 }
 
 .button:hover {
-    background: lightgrey;
+    background: #212121;
 }
 
 .button:active {
     outline:0;
     background: grey;
-}
-
-footer {
-    background:PapayaWhip;
-    text-align: center;
-    height: 5rem;
 }
 
 @media only screen and (max-width: 900px) {
@@ -262,7 +244,7 @@ footer {
         height: 80px;
     }
 
-    img {
+    .picture-wrapper img {
         width: 80px;
         height: 80px;
     }
@@ -305,7 +287,7 @@ footer {
     }
 
     .section {
-        background: rgba(255, 203, 5, 0.80);
+        /*background: rgba(255, 203, 5, 0.80);*/
         width: 360px;
         height: 36px;
         padding: 0 6px;
@@ -329,10 +311,6 @@ footer {
     .button {
         width: 180px;
         height: 30px;
-        background: darkgrey;
-        box-shadow: var(--box-shadow);
-        border: none;
-        text-align: center;
     }
 
 }
